[gd_scene load_steps=4 format=2]

[ext_resource path="res://PauseTheme.tres" type="Theme" id=1]
[ext_resource path="res://font/611BitSmall.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=3]

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
layer = 9
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
color = Color( 0, 0, 0, 0.588235 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -110.0
margin_right = 110.0
custom_constants/separation = 4
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Background/VBoxContainer"]
margin_top = 38.0
margin_right = 220.0
margin_bottom = 66.0
text = "Paused"

[node name="Resume" type="Button" parent="Background/VBoxContainer"]
margin_top = 70.0
margin_right = 220.0
margin_bottom = 102.0
focus_mode = 0
enabled_focus_mode = 0
text = "Resume"

[node name="Restart" type="Button" parent="Background/VBoxContainer"]
margin_top = 106.0
margin_right = 220.0
margin_bottom = 138.0
text = "Restart Game"

[node name="Screenshake" type="Button" parent="Background/VBoxContainer"]
margin_top = 142.0
margin_right = 220.0
margin_bottom = 174.0
text = "Screenshake: On"

[node name="ShowTimer" type="Button" parent="Background/VBoxContainer"]
margin_top = 178.0
margin_right = 220.0
margin_bottom = 210.0
text = "Timer: Off"

[node name="Fullscreen" type="Button" parent="Background/VBoxContainer"]
margin_top = 214.0
margin_right = 220.0
margin_bottom = 246.0
text = "Fullscreen"

[node name="Volume" type="Label" parent="Background/VBoxContainer"]
margin_top = 250.0
margin_right = 220.0
margin_bottom = 266.0
custom_fonts/font = ExtResource( 2 )
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="Background/VBoxContainer"]
margin_top = 270.0
margin_right = 220.0
margin_bottom = 286.0
max_value = 1.0
step = 0.0
value = 1.0
scrollable = false

[node name="Quit" type="Button" parent="Background/VBoxContainer"]
margin_top = 290.0
margin_right = 220.0
margin_bottom = 322.0
text = "Quit"

[connection signal="pressed" from="Background/VBoxContainer/Resume" to="." method="resume"]
[connection signal="pressed" from="Background/VBoxContainer/Restart" to="." method="restart"]
[connection signal="pressed" from="Background/VBoxContainer/Screenshake" to="." method="_on_Screenshake_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/ShowTimer" to="." method="_on_ShowTimer_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="value_changed" from="Background/VBoxContainer/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="Background/VBoxContainer/Quit" to="." method="quit"]
